--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,5 +1,12 @@
 :global {
     html {
         font-family: Arial, Helvetica, sans-serif;
+        height: 100%;
+    }
+    body {
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
