--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -5,6 +5,7 @@
     }
     body {
         height: 100%;
+        margin: 0;
         display: flex;
         justify-content: center;
         align-items: center;
