Adding website spinner

--- a/src/components/Models.module.scss
+++ b/src/components/Models.module.scss
@@ -1,4 +1,13 @@
-#ico-frame {
+.icoFrame {
+    width: 0;
+    height: 0;
+    margin: 200px;
+    position: relative;
+    transform-style: preserve-3d;
+    animation: spin 20s linear infinite;
+}
+
+.webFrame {
     width: 0;
     height: 0;
     margin: 200px;
@@ -14,4 +23,7 @@
 
 :global(.triangle.icosphere) {
     border-bottom-color: rgba(255,0,0,0.2);
+}
+:global(.triangle.website) {
+    border-bottom-color: rgba(4, 150, 218, 0.4);
 }
