--- a/src/components/Models.module.scss
+++ b/src/components/Models.module.scss
@@ -1,3 +1,8 @@
+// Enable backface culling
+:global(.triangle) {
+    backface-visibility: hidden;
+}
+
 .icoFrame {
     width: 0;
     height: 0;
@@ -42,5 +47,6 @@
     border-bottom-color: rgba(255,0,0,0.2);
 }
 :global(.triangle.website) {
+    backface-visibility: visible;
     border-bottom-color: rgba(4, 150, 218, 0.4);
 }
