--- a/src/components/Project.module.scss
+++ b/src/components/Project.module.scss
@@ -5,3 +5,23 @@
     background-color: indianred;
     color: white;
 }
+
+.container {
+    display: grid;
+    width: 1000px;
+    
+    grid-template-columns: 400px 200px 400px;
+    grid-template-rows: 1fr 1fr;
+    gap: 6px;
+
+    img{
+        width: 100%;
+    }
+    p {
+        font-size: large;
+    }
+}
+.frame3d { grid-area: 1 / 1 / 3 / 2; }
+.image0 { grid-area: 1 / 2 / 2 / 3; }
+.image1 { grid-area: 2 / 2 / 3 / 3; }
+.text { grid-area: 1 / 3 / 3 / 4; }
