--- a/src/components/Project.module.scss
+++ b/src/components/Project.module.scss
@@ -24,4 +24,4 @@
 .frame3d { grid-area: 1 / 1 / 3 / 2; }
 .image0 { grid-area: 1 / 2 / 2 / 3; }
 .image1 { grid-area: 2 / 2 / 3 / 3; }
-.text { grid-area: 1 / 3 / 3 / 4; }
+.description { grid-area: 1 / 3 / 3 / 4; }
