--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,3 +1,7 @@
+#root {
+    width: 100%;
+}
+
 :global {
     html {
         font-family: Arial, Helvetica, sans-serif;
@@ -6,9 +10,7 @@
     body {
         margin: 0;
         display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
+        font-family: 'Fira Code', monospace;
     }
     * {
         box-sizing: border-box;
