--- a/src/components/Project.module.scss
+++ b/src/components/Project.module.scss
@@ -1,3 +1,9 @@
+.project {
+    // Largest viewport
+    h2 { font-size: calc(min(15vh, 10vw)); margin: 0; }
+    h3 { font-size: calc(min(5vh, 4vw)); margin: 0; }
+}
+
 .techUsed {
     margin-right: 20px;
     padding: 3px;
