--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -5,3 +5,12 @@
     background-color: dimgrey;
     color: white;
 }
+
+nav {
+    color: black;
+
+    * {
+        margin-left: 10px;
+        padding: 10px;
+    }
+}
