--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,3 +1,5 @@
+@import './src/util/_colors.module.scss';
+
 #root {
     width: 100%;
 }
@@ -6,13 +8,22 @@
     html {
         font-family: Arial, Helvetica, sans-serif;
         height: 100%;
+        background-color: $bg-light;
     }
     body {
         margin: 0;
+        overflow-x: hidden;
+        overflow-y: scroll;
         display: flex;
         font-family: 'Fira Code', monospace;
     }
     * {
         box-sizing: border-box;
     }
+
+    a {
+        color: unset;
+        text-decoration: none; /* no underline */
+    }
 }
+
