--- a/src/components/Models.module.scss
+++ b/src/components/Models.module.scss
@@ -1,3 +1,5 @@
+@import '../util/colors.module.scss';
+
 // Enable backface culling
 :global(.triangle) {
     backface-visibility: hidden;
@@ -17,7 +19,7 @@
     height: 300px;
     width: 400px;
     background-color: white;
-    box-shadow: 0 0 20px lightgray;
+    box-shadow: 0 0 20px $bg-dark;
     position: relative;
 }
 
