--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -6,7 +6,6 @@
 
 :global {
     html {
-        font-family: Arial, Helvetica, sans-serif;
         height: 100%;
         background-color: $bg-light;
     }
@@ -17,6 +16,9 @@
         display: flex;
         font-family: 'Fira Code', monospace;
     }
+    code {
+        font-family: 'Fira Code', monospace;
+    }
     * {
         box-sizing: border-box;
     }
@@ -24,6 +26,10 @@
     a {
         color: unset;
         text-decoration: none; /* no underline */
+    }
+    
+    p a {
+        color: $cyan;
     }
 }
 
