--- a/src/components/Project.module.scss
+++ b/src/components/Project.module.scss
@@ -2,8 +2,28 @@
 
 .project {
     // Largest viewport
-    h2 { font-size: calc(min(15vh, 10vw)); margin: 0; }
-    h3 { font-size: calc(min(5vh, 4vw)); margin: 0; }
+    margin-top: 10vh;
+    margin-bottom: 30vh;
+
+
+    .title {
+        padding: 0;
+        margin: 0;
+        font-size: calc(min(15vh, 10vw)); 
+        line-height: 70%; 
+        font-weight: 400;
+    }
+    .tagline {
+        color: $off-white;
+        margin: 0; 
+        padding: 0; 
+        font-size: calc(min(5vh, 4vw)); 
+        line-height: 70%; 
+    }
+}
+
+.techList {
+    margin-left: 4vw;
 }
 
 .techUsed {
@@ -17,7 +37,7 @@
 .container {
     color: $off-white;
     display: grid;
-    width: 1000px;
+    margin-left: 4vw;
     
     grid-template-columns: 400px 200px 400px;
     grid-template-rows: 1fr 1fr;
@@ -30,7 +50,7 @@
         font-size: large;
     }
 }
-.frame3d { grid-area: 1 / 1 / 3 / 2; }
+.description { grid-area: 1 / 1 / 3 / 2; }
 .image0 { grid-area: 1 / 2 / 2 / 3; }
 .image1 { grid-area: 2 / 2 / 3 / 3; }
-.description { grid-area: 1 / 3 / 3 / 4; }
+.frame3d { grid-area: 1 / 3 / 3 / 4; }
