--- a/src/components/Project.module.scss
+++ b/src/components/Project.module.scss
@@ -7,6 +7,7 @@
 
 
     .title {
+        color: $orange;
         padding: 0;
         margin: 0;
         font-size: calc(min(15vh, 10vw)); 
@@ -14,7 +15,7 @@
         font-weight: 400;
     }
     .tagline {
-        color: $off-white;
+        color: $blue;
         margin: 0; 
         padding: 0; 
         font-size: calc(min(5vh, 4vw)); 
