--- a/src/components/Project.module.scss
+++ b/src/components/Project.module.scss
@@ -10,7 +10,7 @@
         color: $orange;
         padding: 0;
         margin: 0;
-        font-size: calc(min(15vh, 10vw)); 
+        font-size: calc(max(10vw, 40px)); 
         line-height: 70%; 
         font-weight: 400;
     }
@@ -18,8 +18,9 @@
         color: $blue;
         margin: 0; 
         padding: 0; 
-        font-size: calc(min(5vh, 4vw)); 
-        line-height: 70%; 
+        font-size: calc(max(4vw, 24px));  
+        line-height: 80%; 
+        text-shadow: 1px 1px $bg-dark;
     }
 }
 
@@ -55,3 +56,9 @@
 .image0 { grid-area: 1 / 2 / 2 / 3; }
 .image1 { grid-area: 2 / 2 / 3 / 3; }
 .frame3d { grid-area: 1 / 3 / 3 / 4; }
+
+.softbreak {
+    @media (min-width: 550px) {
+        display: none;
+    }
+}
