--- a/src/components/Project.module.scss
+++ b/src/components/Project.module.scss
@@ -25,7 +25,7 @@
 }
 
 .techList {
-    margin-left: 4vw;
+    margin: 1vw 4vw;
 }
 
 .techUsed {
@@ -38,24 +38,31 @@
 
 .container {
     color: $off-white;
-    display: grid;
     margin-left: 4vw;
-    
-    grid-template-columns: 400px 200px 400px;
-    grid-template-rows: 1fr 1fr;
-    gap: 6px;
+    display: flex;
+    align-items: flex-start;
 
     img{
-        width: 100%;
+        width: 300px;
     }
     p {
+        margin-top: 0;
         font-size: large;
     }
 }
-.description { grid-area: 1 / 1 / 3 / 2; }
-.image0 { grid-area: 1 / 2 / 2 / 3; }
-.image1 { grid-area: 2 / 2 / 3 / 3; }
-.frame3d { grid-area: 1 / 3 / 3 / 4; }
+
+.description {
+    display: inline-block;
+    width: 30em;
+}
+.images {
+    display: inline-block;
+    * + * { margin-top: 10px;}
+}
+.frame3d {
+    margin-top: 125px;
+    margin-left: 350px;
+}
 
 .softbreak {
     @media (min-width: 550px) {
