Mobile friendly spacing

--- a/src/components/Project.module.scss
+++ b/src/components/Project.module.scss
@@ -118,6 +118,9 @@
 }
 
 @media (max-width: 700px) {
+    .container {
+        margin-right: 4vw;
+    }
     .flex { 
         width: 100%; 
     }
