--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -100,7 +100,7 @@ nav {
         padding: 0;
 
         a, span {
-            width: 25vw;
+            width: 25%;
             padding: 4px 0;
             font-size: 3.5vw;
             text-align: center;
