--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -4,6 +4,20 @@
     width: 100%;
 }
 
+#app {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex-grow: 1;
+    min-height: 0; // for firefox
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
 :global {
     html {
         min-width: 320px;
@@ -12,9 +26,7 @@
     }
     body {
         margin: 0;
-        overflow-x: hidden;
-        overflow-y: scroll;
-        display: flex;
+        overflow: hidden;
         font-family: 'Fira Code', monospace;
     }
     code {
@@ -33,4 +45,3 @@
         color: $cyan;
     }
 }
-
