--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -1,10 +1,10 @@
-@import '../util/_colors.module.scss';
+@use '../util/colors.scss';
 
 $cursor-width: 4;
 
 .header {
-    background-color: $bg-dark;
-    color: $off-white;
+    background-color: colors.$bg-dark;
+    color: colors.$off-white;
     font-size: 40px;
 
     .top { 
@@ -12,10 +12,10 @@ $cursor-width: 4;
        padding: 5px;
     }
 
-    .me { color: $yellow; }
-    .typeof {color: $off-white; }
-    .type { color: $red; }
-    .semicolon {color: $off-white; }
+    .me { color: colors.$yellow; }
+    .typeof {color: colors.$off-white; }
+    .type { color: colors.$red; }
+    .semicolon {color: colors.$off-white; }
     
     .static {
         display: inline-block;
@@ -41,12 +41,12 @@ $cursor-width: 4;
 
 @keyframes blink {
     from, to { border-right-color: transparent; }
-    50% { border-right-color: $blue; }
+    50% { border-right-color: colors.$blue; }
 }
 
 nav {
     font-size: large;
-    color: $off-white;
+    color: colors.$off-white;
     border-bottom: 1px solid black;
     padding: 0 10px;
 
@@ -60,14 +60,14 @@ nav {
         border-right: 1px solid black;
 
         &:hover, &:focus {
-            background-color: $bg-lighter;
+            background-color: colors.$bg-lighter;
         }
     }
     
     .selected {
-        background-color: $bg-light;
+        background-color: colors.$bg-light;
         border-top: 1px solid black;
-        box-shadow: 0 1px 0 0 $bg-light;
+        box-shadow: 0 1px 0 0 colors.$bg-light;
     }
 }
 
